refactor(Queries): genneral refactoring